<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffc4"
    tools:context="com.example.korisnik.rehab.Kriza">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"

            android:layout_marginTop="0dp"

            android:background="#000000"
            android:foregroundGravity="top"
            android:gravity="center_vertical|center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_weight="0.82"
                android:background="#00000000"
                android:clickable="true"


                android:contentDescription="@string/home_btn"
                app:srcCompat="@drawable/home_btn" />

            <ImageButton
                android:id="@+id/btnProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:clickable="true"
                android:contentDescription="@string/progress_btn"
                app:srcCompat="@drawable/progress_btn" />

            <ImageButton
                android:id="@+id/btnMotivations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.04"
                android:background="#00000000"
                android:clickable="true"
                android:contentDescription="@string/motivations_btn"
                android:foregroundGravity="top"
                app:srcCompat="@drawable/motivations_btn" />

            <ImageButton
                android:id="@+id/btnAchievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.72"
                android:background="#00000000"
                android:clickable="true"
                android:contentDescription="@string/achievements_btn"
                app:srcCompat="@drawable/achievements_btn" />

            <ImageButton
                android:id="@+id/btnGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:clickable="true"
                android:contentDescription="@string/game_btn"
                app:srcCompat="@drawable/game_btn" />

            <ImageButton
                android:id="@+id/Xbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.89"
                android:background="#00000000"
                android:clickable="true"
                android:contentDescription="@string/x_btn"
                android:foregroundGravity="center_horizontal"
                app:srcCompat="@drawable/x_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/btnRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:clickable="true"
                android:contentDescription="@string/kriza_btn"
                app:srcCompat="@drawable/kriza" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:fontFamily="serif"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/kriza_lbl"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
